// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render with always 1`] = `
<span
  className="sc-bdVaJa khkMdF"
/>
`;

exports[`<Tooltip /> should render with blockChild 1`] = `
<span
  className="sc-bdVaJa iVAwZw"
/>
`;

exports[`<Tooltip /> should render with default props 1`] = `
<span
  className="sc-bdVaJa iVAwZw"
/>
`;

exports[`<Tooltip /> should render with length 1`] = `
<span
  className="sc-bdVaJa fZSyEg"
/>
`;

exports[`<Tooltip /> should render with message 1`] = `
<span
  className="sc-bdVaJa eDmcWv"
/>
`;

exports[`<Tooltip /> should render with position: bottom 1`] = `
<span
  className="sc-bdVaJa fAqnua"
/>
`;

exports[`<Tooltip /> should render with position: left 1`] = `
<span
  className="sc-bdVaJa jCuedB"
/>
`;

exports[`<Tooltip /> should render with position: right 1`] = `
<span
  className="sc-bdVaJa hjPhfO"
/>
`;
